--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,26 @@
+body {
+display: flex;
+flex-direction: column;
+flex: 1;
+
+margin: 0;
+}
+
+
+
 .header {
-background-color: #1F2937
+background-color: #1F2937;
+display: flex;
+padding: 10px;
+justify-content: space-around;
+
+}
+
+.header li {
+
+    display: inline-block;
+    margin-right: 16px;
+
 }
 
 .header h4,
@@ -9,6 +30,19 @@ background-color: #1F2937
 
 .subtext {
     background-color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    padding-top: 0px;
+    padding-left: 337px;
+}
+
+.subtext0 {
+    display: flex;
+    background-color:#1F2937
+}
+.subtext button {
+    width: 100px;
 }
 
 .subtext h1,
@@ -33,9 +67,16 @@ button {
 }
 
 .footer {
-    background-color: #1F2937
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
 
 .footer p {
     color: white;
+}
+
+ul {
+    list-style: none;
 }
