--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,26 @@ justify-content: space-around;
 color: white;
 }
 
+.info {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    height: 450px;
+    margin-top: 20px;
+}
+.collage {
+    display: flex;
+    justify-content: center;
+}
+.collage1,
+.collage2,
+.collage3,
+.collage4 {
+    display: flex;
+    flex-direction: column;
+    width: 208px;
+    
+}
 .quote {
     background-color: #E5E7EB;
 }
