--- a/styles.css
+++ b/styles.css
@@ -72,10 +72,37 @@ color: white;
 }
 .quote {
     background-color: #E5E7EB;
+    padding: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
+.inspiringquote {
+    font-size: 36px;
+    width: 800px;
+    font-weight: lighter;
+    font-style: italic;
+}
+.quotee {
+    font-size: 16px;
+    font-weight: bolder;
+    margin-left: 500px;
+    margin-bottom: 50px;
+    margin-top: -20px;
+}
+
+.action {
+    display: flex;
+    margin-top: -140px;
+    margin-bottom: -140px;
+    flex-direction: column;
+    padding: 250px;
+}
 .signup {
     background-color:#3882F6;
+    
 }
 .signup h3,
 .signup p {
